調整設計師版型

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                   訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。
                 </p>
                 <hr class="hr-line" />
-                <p>2022.08.13</p>
+                <p class="s-font">2022.08.13</p>
               </div>
             </a>
 
@@ -330,7 +330,7 @@
                   訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。
                 </p>
                 <hr class="hr-line" />
-                <p>2022.08.13</p>
+                <p class="s-font">2022.08.13</p>
               </div>
             </a>
           </div>
