調整設計師版面

--- a/book-step1.html
+++ b/book-step1.html
@@ -58,7 +58,7 @@
         </div>
         <div class="content-row">
           <div class="row-left row-2">
-            <img src="image/poster.png" alt="movie-name" />
+            <img src="https://fakeimg.pl/240x340/" alt="movie-name" />
           </div>
           <div class="row-min row-5">
             <div class="movie-item">
@@ -69,16 +69,16 @@
               </div>
             </div>
             <div class="content-row movie-detail">
-              <div class="row-5 detail"><span class="material-icons"> location_on </span>台北公館百老匯影城</div>
-              <div class="row-5 detail"><span class="material-icons">videocam</span><span
-                  class="start-time">21:30</span>標準數位 | 12聽</div>
-              <div class="row-5 detail mb-0"><span class="material-icons"> calendar_month </span>2022.08.08 星期一</div>
-              <div class="row-5 detail disable mb-0"><span class="material-icons">chair</span>請先選擇票種</div>
+              <div class="row-5 detail"><span class="svg-icons i-location"></span><span class="info">台北公館百老匯影城</span></div>
+              <div class="row-5 detail"><span class="svg-icons i-cam"></span><span
+                  class="start-time">21:30</span><span class="info">標準數位 | 12聽</span></div>
+              <div class="row-5 detail mb-0"><span class="svg-icons i-calendar"></span><span class="info">2022.08.08 星期一</span></div>
+              <div class="row-5 detail disable mb-0"><span class="svg-icons i-chair"></span><span class="info">請先選擇票種</span></div>
             </div>
           </div>
           <div class="row-right row-3 ">
             <div class="summary l-font">
-              <span class="material-icons "> featured_play_list </span>ORDER SUMMARY
+              <span class="svg-icons i-ticket"></span>ORDER SUMMARY
             </div>
             <div class="summary-detail">
               <li><span class="ticket-name">全票</span>X<span class="ticket-number">8</span>=<span
@@ -110,8 +110,7 @@
             <div class="package">
               <div class="table">
                 <div class="table-tr package-title l-font">
-                  <div class="table-th"><span class="material-icons"> featured_play_list
-                    </span>優惠套票<small>表單可向右滑動</small></div>
+                  <div class="table-th"><span class="svg-icons i-ticket-white"></span>優惠套票<small>表單可向右滑動</small></div>
                 </div>
                 <div class="package-content">
                   <div class="table-tr s-font">
@@ -148,8 +147,7 @@
             <div class="package">
               <div class="table">
                 <div class="table-tr package-title l-font">
-                  <div class="table-th"><span class="material-icons"> featured_play_list
-                    </span>一般票種<small>表單可向右滑動</small></div>
+                  <div class="table-th"><span class="svg-icons i-ticket-white"></span>一般票種<small>表單可向右滑動</small></div>
                 </div>
                 <div class="package-content">
                   <div class="table-tr s-font">
@@ -196,8 +194,7 @@
             <div class="package">
               <div class="table">
                 <div class="table-tr package-title l-font">
-                  <div class="table-th"><span class="material-icons"> featured_play_list
-                    </span>臨櫃換票<small>表單可向右滑動</small></div>
+                  <div class="table-th"><span class="svg-icons i-ticket-white"></span>臨櫃換票<small>表單可向右滑動</small></div>
                 </div>
                 <div class="package-content">
                   <div class="table-tr s-font">
@@ -231,15 +228,13 @@
             </div>
           </div>
           <div class="row-right attention row-4">
-            <span class="material-icons">
-              info_outline
-            </span>
-            <div class="note"><span class="material-icons">info</span>訂票及取票注意事項</div>
+            <span class="svg-icons i-notice-yellow"></span>
+            <div class="note"><span class="svg-icons i-notice"></span>訂票及取票注意事項</div>
             <ul class="s-font">
               <li>訂票張數限制</li>
               <li>訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂。</li>
             </ul>
-            <div class="note"><span class="material-icons">info</span>退換票規定</div>
+            <div class="note"><span class="svg-icons i-notice"></span>退換票規定</div>
             <ul class="s-font">
               <li>訂票張數限制</li>
               <li>
