--- a/book-step3.html
+++ b/book-step3.html
@@ -58,27 +58,27 @@
         </div>
         <div class="content-row">
           <div class="row-left row-2">
-            <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+            <img src="https://fakeimg.pl/240x340/" alt="movie-name" />
           </div>
           <div class="row-min row-5">
             <div class="movie-item">
               <div class="movie-level y12">護6級</div>
               <div class="movie-title">
                 <p class="l-font">劫命救護</p>
-                <span class="s-font">AMBULANCE</span>
+                <span class="s-font ">AMBULANCE</span>
               </div>
             </div>
             <div class="content-row movie-detail">
-              <div class="row-5 detail"><span class="material-icons"> location_on </span>台北公館百老匯影城</div>
-              <div class="row-5 detail"><span class="material-icons">videocam</span><span
-                  class="start-time">21:30</span>標準數位 | 12聽</div>
-              <div class="row-5 detail mb-0"><span class="material-icons"> calendar_month </span>2022.08.08 星期一</div>
-              <div class="row-5 detail mb-0 s-font"><span class="material-icons">chair</span>12-07,12-08,12-09,12-11,12-12</div>
+              <div class="row-5 detail"><span class="svg-icons i-location"></span><span class="info">台北公館百老匯影城</span></div>
+              <div class="row-5 detail"><span class="svg-icons i-cam"></span><span
+                  class="start-time">21:30</span><span class="info">標準數位 | 12聽</span></div>
+              <div class="row-5 detail mb-0"><span class="svg-icons i-calendar"></span><span class="info">2022.08.08 星期一</span></div>
+              <div class="row-5 detail disable mb-0"><span class="svg-icons i-chair"></span><span class="info">請先選擇票種</span></div>
             </div>
           </div>
           <div class="row-right row-3 ">
             <div class="summary l-font">
-              <span class="material-icons"> featured_play_list </span>ORDER SUMMARY
+              <span class="svg-icons i-ticket"></span>ORDER SUMMARY
             </div>
             <div class="summary-detail">
               <li><span class="ticket-name">全票</span>X<span class="ticket-number">8</span>=<span
