--- a/movie-info.html
+++ b/movie-info.html
@@ -53,7 +53,7 @@
             <span class="s-font">AMBULANCE</span>
           </div>
           <div class="up-date s-font">上映日期 2022-03-25</div>
-          <button class="book-btn"><a href="book-step1.html"><span class="svg-icons i-ticket"></span>前往訂票</a></button>
+          <button class="book-btn"><a href="book-step1.html"><span class="svg-icons i-ticket-white"></span>前往訂票</a></button>
           <div class="list-item">
             <div class="list-row"><span>導演</span><span>麥可貝</span></div>
             <div class="list-row"><span>演員</span><span>傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷傑克葛倫</span>
@@ -74,7 +74,7 @@
       </div>
       <div class="trailer">
         <div class="video-container">
-          <iframe width="854" height="480" src="https://www.youtube.com/embed/oscVV_ZGU8g" title="YouTube video player"
+          <iframe width="854" height="480" src="https://www.youtube.com/embed/oscVV_ZGU8g" title="電影名稱"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
