--- a/book.html
+++ b/book.html
@@ -55,10 +55,11 @@
         <div class="tab-content">
           <div class="content-row">
             <div class="row-left row-6">
-              <div class="movie-item row-4">
+              <div class="movie-item row-4 item-img">
                 <img src="image/poster.png" alt="movie-name" />
+                <a href="" class="more s-font"><span class="svg-icons i-more"></span>更多電影介紹</a>
               </div>
-              <div class="movie-item row-6">
+              <div class="movie-item row-6 item-info">
                 <div class="movie-level y12">護6級</div>
                 <div class="movie-title">
                   <p class="l-font">劫命救護</p>
@@ -123,10 +124,11 @@
           </div>
           <div class="content-row">
             <div class="row-left row-6">
-              <div class="movie-item row-4">
+              <div class="movie-item row-4 item-img">
                 <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+                <a href="" class="more s-font"><span class="svg-icons i-more"></span>更多電影介紹</a>
               </div>
-              <div class="movie-item row-6">
+              <div class="movie-item row-6 item-info">
                 <div class="movie-level y12">護6級</div>
                 <div class="movie-title">
                   <p class="l-font">如果30歲還是處男，似乎就能成為魔法師</p>
